TreeBUGS 0.4.5 (March 2016)
===========

* Special case of a single hierarchical parameter in traitMPT()  [Wishart reduces to chi^2]
* Allow fixed effect MPT parameters (e.g., a single guessing parameter for all participants). Specified in restrictions = list("g=FE")
* Bayesian p-value in getGroupMeans() to test whether group mean differs from overall mean


TreeBUGS 0.4.4 (March 2016)
===========

* New function extendMPT() to get additional MCMC samples for fitted traitMPT and betaMPT
* Bug fixes if parameter appear twice in model equation (e.g., u*u)


TreeBUGS 0.4.3 (February 2016)
===========

* Use own summary function (functions in runjags are slow and unstable)
* Estimation of DIC requries argument "dic=TRUE" or can be estimated afterwards by: fit$dic <- extract(fit$runjags, "dic")


TreeBUGS 0.4.2 (February 2016)
===========

* Using the package runjags instead of R2jags (better functionality, e.g., provides progress bar during parallel sampling; max.time for autojags)
* Making the function summarizeMPT() visible to allow users to recompute nice MPT summaries after changing the mcmc object (e.g., after the exclusion of MCMC samples)


TreeBUGS 0.4.1 (February 2016)
===========

* new argument "T1group" to compute T1 statistic separately for a grouping factor (e.g., experimental condition; can be one of the predictors in traitMPT)
* changed name of parameter estimate plotting function to "plotParam()"
* new generic plotting function plot() for betaMPT and traitMPT (a convenient wrapper for the convergence plots in coda)


TreeBUGS 0.4.0 (February 2016)
===========

* Possible to sample correlations AND predictors in traitMPT (using covStructure vs. predStructure)
* Defaults for traitMPT: No predictors ; correlations for all covariates that are not included in predStructure
* Changed argument name "covType" to "predType" (since it is only relevant for predStructure in traitMPT)