@@ -4,6 +4,7 @@ TreeBUGS 0.4.5 (March 2016)
 * Special case of a single hierarchical parameter in traitMPT()  [Wishart reduces to chi^2]
 * Allow fixed effect MPT parameters (e.g., a single guessing parameter for all participants). Specified in restrictions = list("g=FE")
 * Bayesian p-value in getGroupMeans() to test whether group mean differs from overall mean
+* Estimation of correlations of theta parameters in betaMPT (based on the MCMC samples; no explicit prior)
 
 
 TreeBUGS 0.4.4 (March 2016)
